generate HiFi reads using randomreads.sh

--- a/evals/snakemake_config.yaml
+++ b/evals/snakemake_config.yaml
@@ -7,13 +7,14 @@
 pbsim_bin_path: pbsim1
 #pbsim_config_path: /home/pesho/libs/PBSIM-PacBio-Simulator/data/model_qc_clr
 art_bin_path: art_illumina
+randomreads_path: /home/pesho/libs/bbmap/randomreads.sh
 
 # aligners
 astarix_bin_path:      astarix
 graphaligner_bin_path: GraphAligner
 vg_bin_path:           vg
 pasgal_bin_path:       PaSGAL
-vargas_bin_path: vargas
+vargas_bin_path:       vargas
 
 # generators
 bcalm_bin_path:        bcalm
