--- a/evals/Snakefile
+++ b/evals/Snakefile
@@ -1,8 +1,10 @@
 configfile: "snakemake_config.yaml"
+
 BCALM = config["bcalm_bin_path"]
 BCALMCONVERTPATH = config["bcalm_convert_path"]
 ART = config["art_bin_path"]
 PBSIM = config["pbsim_bin_path"]
+RANDOMREADS = config["randomreads_path"]
 
 ASTARIX_BIN = config["astarix_bin_path"]
 GA_BIN = config["graphaligner_bin_path"]
@@ -39,9 +41,9 @@ REF_SIZE_ms             = [150]
 READLEN_ALGOS           = ["astarix-seeds"] #, "astarix-prefix", "dijkstra"] #"vargas", "graphaligner", "vg", "pasgal",# "astarix-seeds-approx"]
 READLEN_SCALING_GRAPHS  = ["ecoli"]
 READLEN_GRAPH_HEADS     = [10000000]
-READLEN_Ns              = [200]
-READLEN_SEQ_TECHNOLOGY  = ["ccs"] #"illumina", 
-READLEN_ms              = [100, 300, 700, 1000, 2000, 3000, 5000, 7000, 10000, 13000, 15000, 18000, 20000]
+READLEN_Ns              = [20]
+READLEN_SEQ_TECHNOLOGY  = ["hifi"] #"ccs", "illumina", 
+READLEN_ms              = [100] #, 300, 700, 1000, 2000, 3000, 5000, 7000, 10000, 13000, 15000, 18000, 20000]
 #READLEN_ms              = [50, 100, 150, 200, 250, 300, 500, 700, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 5000, 7000, 10000]
 #READLEN_ms              = [50, 100, 150, 160, 170, 180, 200, 250]
 
@@ -402,6 +404,17 @@ rule simulate_ccs_reads:
 		shell("cp -L sd_0001.fastq {params.prefix}.fq")
 		shell("cp -L sd_0001.maf {params.prefix}.maf")
 		shell("cp -L sd_0001.ref {params.prefix}.ref")
+
+rule simulate_hifi_reads:
+	input:
+		"prefixes/"+graph_params+".fa"
+	params:
+		prefix = "reads/"+graph_params+"_N{N}_m{m}_hifi/reads"
+	output:
+		"reads/"+graph_params+"_N{N}_m{m}_hifi/reads.fq"
+	shadow: "shallow"
+	shell:
+		"{RANDOMREADS} build=1 ow=t seed=1 ref={input} illuminanames=t addslash=t pacbio=t pbmin=0.003 pbmax=0.003 reads={wildcards.N} paired=f gaussianlength=t minlength=1000 midlength=5000 maxlength=10000 out={output}"
 
 #ruleorder: head_ecoli_reads > head_reads
 
